--- a/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
@@ -172,7 +172,7 @@
         var cids = [];
         for(var i= 0, len=components.length; i<len; i++){
             var cid = components[i].cid;
-            if(cid > 4){ //取4是因为默认的settings中已存在2，3，4组件
+            if(cid > 3){ //取3是因为默认的settings中已存在2，3组件
                cids.push(cid);
             }
         }
