--- a/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
@@ -43,8 +43,8 @@
                     <span class="em75 xa-text xui-text">上传图片</span>
                 </div>
             </div>
-
         </div>
+        <div class="wui-i-status xui-hidden">已评价</div>
         <div class="wui-i-body wa-i-body">
             <div class="wui-reviewText">
                 <div class="em7 c9 xui-limitNum wa-limitNum">
