修复组件保存时不加载默认配置的问题

--- a/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
@@ -212,7 +212,7 @@
       synchronizer.run();
       W.Synchronizer = synchronizer;
       
-      "ordinary" === select_type || loadPages(pageManagerView);
+      loadPages(pageManagerView);
       
       $('.xa-save').click(function() {
           var that = this;
