--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluate.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluate.html
@@ -90,6 +90,7 @@
             }else{
                 $('.wa-submitTermite').html('追加晒图');
             }
+            $('#dj_review_detail').val(detail || '').siblings().hide();
             //渲染动态组件数据
             for(var key in detail) {
                 var value = detail[key];
@@ -142,7 +143,6 @@
             $('body').delegate('.wa-submitTermite', 'click', submitEvaluateData);
         }else{
             //否则直接渲染页面
-            $('#dj_review_detail').val(product_review.review_detail || '');
             bind_events();
         }
     }
@@ -216,7 +216,7 @@
             template_type: template_type
         };
 
-        if(!created){ //晒图
+        if(created){ //晒图
             deblog('post', postData);
             W.getApi().call({
                 app: 'm/apps/evaluate',
@@ -238,6 +238,8 @@
                 wuiAlert('请输入5-200字', 2000);
                 return;
             }
+            //隐藏说明文字
+            $('.wui-reviewHint').find('.wui-i-box').hide();
             $.extend(postData, {
                 review_detail: $('#dj_review_detail').val(),
                 serve_score: $('#dj_serve_score').attr('data-value'),
