--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_more_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_more_evaluates.html
@@ -75,7 +75,7 @@
 <div class="xui-reviewAllPage xui-page xa-page">
     <div class="xui-title pr">
         <a class="xa-goBack xui-returnPrev pa">
-            <i data-ui-role="goBack"></i>
+            <i id="goBack"></i>
         </a>
         <span class="em9">更多评价</span>
     </div>
