--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_more_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_more_evaluates.html
@@ -74,8 +74,8 @@
 {% block content-panel %}
 <div class="xui-reviewAllPage xui-page xa-page">
     <div class="xui-title pr">
-        <a class="xa-goBack xui-returnPrev pa">
-            <i id="goBack"></i>
+        <a class="xa-goBack xui-returnPrev pa" id="goBack">
+            <i></i>
         </a>
         <span class="em9">更多评价</span>
     </div>
