--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -115,8 +115,8 @@
 {% block content-panel %}
 <div class="xui-productReviewListPage pb20">
     <div class="xui-title pr">
-        <a class="xa-goBack xui-returnPrev pa">
-            <i id="goBack"></i>
+        <a class="xa-goBack xui-returnPrev pa" id="goBack">
+            <i></i>
         </a>
         <span class="em9">我的评价</span>
     </div>
